<resources>
    <string name="app_name">Jam</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="loading">Making music...</string>

    <string name="placeholder_email">musiclover@jam.com</string>
    <string name="placeholder_password">chirpchirp</string>

    <string-array name="array_genre">
        <item>Classical</item>
        <item>Jazz</item>
        <item>Rock</item>
        <item>Folk</item>
        <item>Country</item>
        <item>Pop/Other</item>
    </string-array>
    <string-array name="array_years">
        <item>0-1 years</item>
        <item>2-4 years</item>
        <item>5-8 years</item>
        <item>9+ years</item>
    </string-array>

    <string name="bio">Tell us about yourself</string>
    <string name="name">What is your name?</string>
    <string name="phone">What is your phone number?</string>
    <string name="instrument">What instrument(s) do you play?</string>
    <string name="goals">What are you looking for?</string>
    <string name="attach_photo">Attach Photo</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_profile">Save Profile</string>

    <string name="bio_error">You must provide your bio!</string>
    <string name="instrument_error">You must provide your instrument!</string>
    <string name="name_error">You must provide your name!</string>
    <string name="phone_error">You must provide your phone number!</string>
    <string name="search_error">You must provide an answer!</string>

    <string name="profile">profile</string>
    <string name="matches">matches</string>
    <string name="match_success">It\'s a match!</string>
    <string name="save">Save</string>
    <string name="skip">Skip</string>
</resources>
